# Droplet-Detection-and-Tracking

./: .gitignore  CMakeLists.txt  LICENSE  ReadMe.md
config/: custombinds.yaml  parameters.yaml
include/: Auxiliary.h  LoadFiles.h  MatlabExport.h  Tests.h  Utility.h  Vision.h
src/: Auxiliary.cpp  Main.cpp  MatlabExport.cpp  Tests.cpp  Tracking.cpp  Vision.cpp
